<resources>
    <string name="app_name" translatable="false">Loopy II</string>
    <string name="preference_file_key" translatable="false">com.michaelpohl.loopyplayer2</string>
    <string name="prefs_loops_key" translatable="false">loops_list</string>
    <string name="message_empty_folder">This folder contains no playable audio files!</string>
    <string name="menu_item_name_help">Help</string>
    <string name="menu_item_name_settings">Settings</string>
    <string name="menu_item_name_file_browser">Browse Files</string>
    <string name="btn_select_all">Select all</string>
    <string name="btn_deselect_all">Deselect</string>
    <string name="menu_item_accept_files">Open selected files</string>
    <string name="snackbar_text_no_new_files_selected">You have no audio files selected or your selected files are already in the player!</string>
    <string name="btn_clear_list">Clear player list</string>
    <string name="appbar_title_player">Loopy II</string>
    <string name="title_mediastore_browser">Browse Music Library</string>
    <string name="title_file_browser">Browse Storage</string>
    <string name="title_help">How to use Loopy</string>
    <string name="btn_about_app">About this app</string>
    <string name="btn_browse_mediastore">Browse media files</string>
    <string name="drawer_header">Loopy II</string>
    <string name="drawer_subtitle">Version: </string>
    <string name="nav_btn_browse_music_library">Browse music library</string>
    <string name="nav_btn_browse_phone_storage">Browse device storage</string>
    <string name="nav_btn_open_settings">Change app settings</string>
    <string name="nav_btn_how_to">How to use Loopy</string>
    <string name="nav_category_settings">Settings</string>
    <string name="nav_category_player_settings">Player settings</string>
    <string name="btn_open_selection">Open selection</string>
    <string name="nav_category_information">Infos &amp; Feedback</string>
    <string name="nav_category_find_audio_files">Find audio files</string>
    <string name="nav_btn_about">About this app</string>
    <string name="dialog_settings_header">Settings</string>
    <string name="settings_label_loop_switching_behaviour">Loop switching behaviour</string>
    <string name="settings_item_switch_immediately">Switch immediately</string>
    <string name="settings_item_wait_until_finished">Wait until finished</string>
    <string name="settings_label_accepted_file_types">Accepted file types</string>
    <string name="settings_item_allow_wav">Allow .wav</string>
    <string name="settings_item_allow_mp3">Allow .mp3</string>
    <string name="settings_item_allow_ogg">Allow .ogg</string>
    <string name="settings_label_other_settings">Other settings</string>
    <string name="settings_item_show_loop_count">Show loop count</string>
    <string name="nav_btn_clear_current_file_selection">Clear current file selection</string>
    <string name="loop_count_prefix">Looped:</string>
    <string name="loop_count_postfix">times</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_remove_loop_header">Remove Loop</string>
    <string name="dialog_remove_loop_content">Dou you want to remove this loop from the selection?</string>
    <string name="btn_show_libraries_info">Show Libraries</string>
    <string name="player_empty_message">You have no loops selected. Open the menu and select one of the options to browse your phone\'s storage</string>
    <string name="album">Album</string>
    <string name="dialog_clear_list_header">Clear List</string>
    <string name="dialog_clear_list_content">Do you really want to clear the player\'s loops list?</string>
    <string name="title_licenses">Open source libraries used in this app</string>
    <string name="dialog_loopy_license_title">App Information</string>
    <string name="btn_show_app_info">Show App Info</string>
    <string name="snackbar_cant_clear_loops">Can\'t clear loops while not in the player!</string>
    <string name="snackbar_error_message">An error occured. Really sorry! Please let the developer know so he can fix it for you!</string>
    <string name="save">Save</string>
    <string name="settings_item_keep_screen_on">Keep Screen On</string>
    <string name="settings_item_play_in_background">Play in Background</string>
    <string name="processing">Processing…%1$d</string>
    <string name="settings_item_sample_rate">Sample rate</string>
    <string name="player_sample_rate">Sample rate: %s</string>
    <string name="library_id">Artifact ID: %s</string>
    <string name="library_copyright_holder">Copyright: %s</string>
    <string name="library_License">License: %s</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About Loopy</string>
    <string name="unknown">unknown</string>
    <string name="title_whatsnew">Changelog</string>
    <string name="nav_btn_whatsnew">Changelog</string>
    <string name="settings_item_show_suffix">Display File Extension</string>
    <string name="btn_close">Close</string>
    <string name="nav_btn_contact"><![CDATA[Contact & Feedback]]></string>
    <string name="feedback_alert_title">Send feedback</string>
    <string name="feedback_alert_text">Do you want to send an email to the developer?</string>
    <string name="loading_overlay_headline">Converting the selected files to raw audio</string>
    <string name="acra_dialog_text">Unfortunately, Loopy 2 crashed. Do you want to send a crash report email to the developer to help fix the issue?</string>
    <string name="acra_dialog_title">Sorry, the app crashed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arca_dialog_comment_prompt">Enter a comment if you like:</string>
    <string name="arca_dialog_email_prompt">Enter your email address:</string>
    <string name="error_reporting_email">google@michaelpohl.de</string>
    <string name="error_reporting_subject">Loopy 2 crashed!</string>


</resources>
