<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/MatchWidth"
              android:orientation="vertical">

    <TextView
            style="@style/DialogHeader"
            android:id="@+id/tv_header"
            android:text="@string/dialog_settings_header"
            android:textAppearance="@style/Text.SubHeaderLarge"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.ConstraintLayout
            style="@style/Row">

        <TextView
                android:id="@+id/tv_header_switchmode"
                style="@style/WrapContent"
                android:text="@string/settings_label_loop_switching_behaviour"
                android:textAppearance="@style/Text.SubHeaderLarge"
                android:textColor="@color/action"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_label_switch_immediately"
                style="@style/WrapContent"
                android:text="@string/settings_item_switch_immediately"
                android:textAppearance="@style/Text.Standard"
                app:layout_constraintBaseline_toBaselineOf="@id/rb_switch_immediately"
                app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
                android:id="@+id/rb_switch_immediately"
                style="@style/WrapContent"
                android:buttonTint="@color/action"
                app:layout_constraintTop_toBottomOf="@id/tv_header_switchmode"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:id="@+id/tv_label_wait_until_finished"
                style="@style/WrapContent"
                android:text="@string/settings_item_wait_until_finished"
                android:textAppearance="@style/Text.Standard"
                app:layout_constraintBaseline_toBaselineOf="@id/rb_wait_until_finished"
                app:layout_constraintStart_toStartOf="parent"/>

        <RadioButton
                android:id="@+id/rb_wait_until_finished"
                style="@style/WrapContent"
                android:buttonTint="@color/action"
                app:layout_constraintTop_toBottomOf="@id/rb_switch_immediately"
                app:layout_constraintEnd_toEndOf="parent"/>

        <View
                android:id="@+id/divider_1"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/rb_wait_until_finished"/>

        <TextView
                android:id="@+id/tv_header_filetypes"
                style="@style/WrapContent"
                android:text="@string/settings_label_accepted_file_types"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Text.SubHeaderLarge"
                android:textColor="@color/action"
                app:layout_constraintTop_toBottomOf="@id/divider_1"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_label_wav"
                style="@style/WrapContent"
                android:text="@string/settings_item_allow_wav"
                android:textAppearance="@style/Text.Standard"
                app:layout_constraintBaseline_toBaselineOf="@id/cb_check_wav"
                app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
                android:id="@+id/cb_check_wav"
                style="@style/WrapContent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_filetypes"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
                android:id="@+id/tv_label_mp3"
                style="@style/WrapContent"
                android:text="@string/settings_item_allow_mp3"
                android:textAppearance="@style/Text.Standard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/cb_check_mp3"/>

        <CheckBox
                android:id="@+id/cb_check_mp3"
                style="@style/WrapContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_check_wav"/>

        <TextView
                android:id="@+id/tv_label_ogg"
                style="@style/WrapContent"
                android:text="@string/settings_item_allow_ogg"
                android:textAppearance="@style/Text.Standard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/cb_check_ogg"/>

        <CheckBox
                android:id="@+id/cb_check_ogg"
                style="@style/WrapContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_check_mp3"/>

        <View
                android:id="@+id/divider_2"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/cb_check_ogg"/>

        <TextView
                android:id="@+id/tv_header_other_settings"
                style="@style/WrapContent"
                android:text="@string/settings_label_other_settings"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Text.SubHeaderLarge"
                android:textColor="@color/action"
                app:layout_constraintTop_toBottomOf="@id/divider_2"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_label_show_loop_count"
                style="@style/WrapContent"
                android:text="@string/settings_item_show_loop_count"
                android:textAppearance="@style/Text.Standard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/cb_check_show_loop_count"/>

        <CheckBox
                android:id="@+id/cb_check_show_loop_count"
                style="@style/WrapContent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_other_settings"/>

        <TextView
        android:id="@+id/tv_label_keep_screen_on"
        style="@style/WrapContent"
        android:text="@string/settings_item_keep_screen_on"
        android:textAppearance="@style/Text.Standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/cb_check_keep_screen_on"/>

        <CheckBox
            android:id="@+id/cb_check_keep_screen_on"
            style="@style/WrapContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_show_loop_count"/>

        <TextView
            android:id="@+id/tv_label_play_in_background"
            style="@style/WrapContent"
            android:text="@string/settings_item_play_in_background"
            android:textAppearance="@style/Text.Standard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/cb_check_play_in_background"/>

        <CheckBox
            android:id="@+id/cb_check_play_in_background"
            style="@style/WrapContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_keep_screen_on"/>

        <Button
        android:id="@+id/btn_ok"
        android:text="@string/save"
        android:layout_marginTop="16dp"
        style="@style/Button.Borderless"
        app:layout_constraintTop_toBottomOf="@id/cb_check_play_in_background"
        app:layout_constraintEnd_toEndOf="parent"/>

        <Button
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        style="@style/Button.Borderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_ok"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
