<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_browse_media"
                android:icon="@drawable/ic_audio"
                android:title="@string/nav_btn_browse_music_library"/>
        <item
                android:id="@+id/nav_browse_storage"
                android:icon="@drawable/ic_folder"
                android:title="@string/nav_btn_browse_phone_storage"/>

    </group>

    <item android:title="@string/nav_category_settings">
        <menu>
            <item
                    android:id="@+id/nav_set_filetypes"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/nav_btn_change_accepted_file_types"/>
            <item
                    android:id="@+id/nav_set_switch_mode"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
