<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.michaelpohl.loopyplayer2.ui.help.MarkdownViewerViewModel" />
    </data>

    <ScrollView
        android:id="@+id/sv_content"
        style="@style/MatchParent"
        android:background="@color/black"
        android:padding="8dp"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/MatchParent">

            <com.michaelpohl.loopyplayer2.ui.util.MarkDownTextView
                android:id="@+id/tv_content"
                style="@style/MatchWidth"
                android:layout_margin="8dp"
                android:textAppearance="@style/Text.Standard"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_show_app_info"
                style="@style/Button"
                android:onClick="@{_ -> model.showInfoListener.invoke()}"
                android:text="@string/btn_show_app_info"
                android:visibility="@{model.showInfoButtons}"
                app:layout_constraintEnd_toStartOf="@id/btn_show_licenses"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

            <Button
                android:id="@+id/btn_show_licenses"
                style="@style/Button"
                android:onClick="@{_ -> model.showUsedLibrariesListener.invoke()}"
                android:text="@string/btn_show_libraries_info"
                android:visibility="@{model.showInfoButtons}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_show_app_info"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

            <Button
                android:id="@+id/btn_close"
                style="@style/Button"
                android:onClick="@{_ -> model.goBackListener.invoke()}"
                android:text="@string/btn_close"
                android:visibility="@{model.showCloseButton}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
